[project]
name = "langgraph-tut"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "langchain-community>=0.3.5",
    "langchain-openai>=0.2.6",
    "langchain>=0.3.7",
    "langgraph>=0.2.45",
    "openai>=1.54.3",
    "python-dotenv>=1.0.1",
]
